[gd_scene load_steps=5 format=3 uid="uid://7ckmdhnegsvj"]

[ext_resource type="Script" path="res://scripts/enemy_cup_bomb.gd" id="1_qkm34"]
[ext_resource type="Texture2D" uid="uid://cw640silkjhim" path="res://assests/spritesheet.png" id="2_ehafr"]

[sub_resource type="AtlasTexture" id="AtlasTexture_xxxcs"]
atlas = ExtResource("2_ehafr")
region = Rect2(80, 96, 16, 16)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_p1r28"]
size = Vector2(8.32602, 8.28506)

[node name="enemy_cup" type="Area2D" groups=["Enemies"]]
z_index = 2
collision_layer = 32
script = ExtResource("1_qkm34")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(0, 0.87092)
scale = Vector2(1.68274, 1.10887)
texture = SubResource("AtlasTexture_xxxcs")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0.518144, 2.5)
scale = Vector2(2.75807, 1.56909)
shape = SubResource("RectangleShape2D_p1r28")

[node name="SpawnTimer" type="Timer" parent="."]
wait_time = 0.062

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
